# investor-relations-harness

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml
assets/: index-Ah7PjTU4.js  index-CDpsvhpO.css  index-CWSUbVgH.js  index-DxMB_WZH.js  index-TLfIP7d8.js  index-wxvnC-O4.css
deploy/: README.md  apprunner-service.json  iam-access-role-trust.json  iam-instance-role-policy.json  iam-instance-role-trust.json
docs/: PRODUCT_SPEC.md  demo-data.json  index.html
scripts/: build_spa.py  check_spa_fresh.py  gen_static_demo.py
src/attest/: __init__.py  cli.py  demo.py  service.py
src/attest/api/: __init__.py  app.py  auth.py  frontend.py  schemas.py
src/attest/api/static/: index.html
src/attest/audit/: __init__.py  events.py  log.py
src/attest/domain/: __init__.py  document.py  facts.py  metrics.py  money.py  period.py  verdicts.py
src/attest/edge/: __init__.py  client.py  narrator.py  prompts.py  proposer.py  service.py
src/attest/eval/: __init__.py  feedback.py  harness.py  perturbation.py  restatement.py  sheets_bridge.py  synthetic_eval.py
src/attest/eval/golden/: extraction_attribution.json  figure_tieouts.json  rule_findings.json
src/attest/eval/restatement_fixtures/: atlas_cloud_4_02.json  meridian_cloud_4_02.json
src/attest/extraction/: __init__.py  claims.py  tables.py  text.py
src/attest/factstore/: __init__.py  repository.py
src/attest/ingestion/: __init__.py  base.py  edgar.py  edgar_companyfacts.py  edgar_releases.py  edgar_xbrl.py  exa.py  exa_releases.py  guidance.py  prior_period.py  releases.py  sec.py
src/attest/ingestion/fixtures/: atlas_q1_fy2026.json  atlas_q1_fy2026_8k_ex99_1.txt  meridian_q1_fy2026.json  meridian_q1_fy2026_8k_ex99_1.txt
src/attest/storage/: __init__.py  factory.py  postgres.py  redis_cache.py  schema.sql
src/attest/verification/: __init__.py  candidates.py  engine.py
src/attest/verification/rules/: __init__.py  consistency.py  derived.py  directional.py  forward_looking.py  ranges.py  reg_g.py  units.py
tests/: test_analyze_api.py  test_api.py  test_audit.py  test_companyfacts.py  test_derived_binding.py  test_derived_metrics.py  test_disclosure.py  test_edgar_ingestion.py  test_edgar_live.py  test_edgar_releases.py  test_edge.py  test_eval.py  test_exa_releases.py  test_extraction.py  test_factstore_ingestion.py  test_feedback.py  test_guidance_ingestion.py  test_hardening.py  test_historical_ingestion.py  test_increments.py  test_money.py  test_multicompany_accuracy.py  test_perturbation.py  test_prior_period_ingestion.py  test_restatement.py  test_rules.py  test_sheets_bridge.py  test_storage.py  test_synthetic_eval.py  test_tables.py  test_unh_end_to_end.py  test_user_workflow.py  test_verification.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  migration.test.tsx  reference.test.tsx  store.tsx  styles.css  types.ts  userWorkflow.test.tsx  vite-env.d.ts
web/src/api/: client.ts
web/src/components/: Calendar.tsx  CommitmentModal.tsx  Consensus.tsx  DocumentView.tsx  DocumentsManager.tsx  FigureModal.tsx  NarrativeModal.tsx  Popover.tsx  Sidebar.tsx  SourceDocumentModal.tsx  SourcesModal.tsx  TopBar.tsx  TrendChart.tsx  UploadModal.tsx
web/src/data/: documents.ts  figures.ts  library.ts  narratives.ts  trends.ts  workspace.ts
web/src/lib/: buildDoc.test.ts  buildDoc.ts  icons.tsx  ticker.test.ts  ticker.ts  verify.test.ts  verify.ts
