[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attest"
version = "0.1.0"
description = "Attest — the deterministic disclosure-verification spine for investor relations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Attest" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# The LLM edge is the replaceable, probabilistic layer. It is intentionally an
# optional extra so the deterministic core installs and runs with no model
# dependency. Tests exercise the edge with a fake client and never need this.
llm = [
    "anthropic>=0.40",
]
# Durable storage backends (Postgres + optional Redis cache). Also optional: the
# in-memory reference stores are the default, so the core needs no database.
storage = [
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
attest = "attest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
attest = [
    "ingestion/fixtures/*.json",
    "eval/golden/*.json",
    "eval/restatement_fixtures/*.json",
    "api/static/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
