[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attest"
version = "0.1.0"
description = "Attest — the deterministic disclosure-verification spine for investor relations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Attest" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
attest = "attest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
attest = ["ingestion/fixtures/*.json", "ingestion/fixtures/*.txt", "eval/golden/*.json", "api/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src"]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
